--- a/index.html
+++ b/index.html
@@ -2,10 +2,21 @@
 <link rel="stylesheet" href="stylesheets/style.css">
 
 <main id=controls>
+  
+  <section id=toolbar>
+    <p>
+      Autosheet
+    </p>
+    <button id=cursor>Cursor</button>
+    <button id=pen>Pen</button>
+    <button id=eraser>Eraser</button>
+  </section>
+
   <section class=sheet id=page1>
     <img src="images/page1.png">
   </section>
 </main>
 
 <script src="scripts/controls.js"></script>
+<script src="scripts/canvas.js"></script>
 <script src="scripts/index.js"></script>
