saving and loading

--- a/index.html
+++ b/index.html
@@ -1,21 +1,24 @@
 <title>Pathfinder Character Sheet</title>
 <link rel="stylesheet" href="stylesheets/style.css">
+<link rel="stylesheet" href="stylesheets/first-edition.css">
 
-<main id=controls>
-  
-  <section id=toolbar>
-    <p>
-      Autosheet
-    </p>
-    <button id=cursor>Cursor</button>
-    <button id=pen>Pen</button>
-    <button id=eraser>Eraser</button>
-  </section>
+<section id=toolbar>
+  <p>
+    Autosheet
+  </p>
+  <button id=import>Import</button>
+  <button id=save>Save</button>
+  <button id=cursor>Cursor</button>
+  <button id=pen>Pen</button>
+  <button id=eraser>Eraser</button>
+</section>
 
-  <section class=sheet id=page1>
-    <img src="images/page1.png">
-  </section>
-</main>
+<section class=sheet id=page1>
+  <img src="images/page1.png">
+</section>
+<section class=sheet id=page2>
+  <img src="images/page2.png">
+</section>
 
 <script src="scripts/controls.js"></script>
 <script src="scripts/canvas.js"></script>
