--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <title>Pathfinder Character Sheet</title>
 <link rel="stylesheet" href="stylesheets/style.css">
-<link rel="stylesheet" href="stylesheets/first-edition.css">
+<link rel="stylesheet" href="stylesheets/first-edition-pages.css">
+<link rel="stylesheet" href="stylesheets/first-edition-page1.css">
+<link rel="stylesheet" href="stylesheets/first-edition-page2.css">
 
 <section id=toolbar>
   <p>
@@ -22,4 +24,5 @@
 
 <script src="scripts/controls.js"></script>
 <script src="scripts/canvas.js"></script>
+<script src="scripts/elements.js"></script>
 <script src="scripts/index.js"></script>
