--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
   <img src="images/page2.png">
 </section>
 
-<script src="scripts/controls.js"></script>
-<script src="scripts/canvas.js"></script>
 <script src="scripts/elements.js"></script>
+<script src="scripts/controls.js"></script>
+<script src="scripts/first-edition-setup.js"></script>
+<script src="scripts/canvas.js"></script>
 <script src="scripts/index.js"></script>
