image not draggable

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 </section>
 
 <section class=sheet id=page1>
-  <img src="images/page1.png">
+  <img src="images/page1.png" draggable="false">
 </section>
 <section class=sheet id=page2>
-  <img src="images/page2.png">
+  <img src="images/page2.png" draggable="false">
 </section>
 
 <script src="scripts/elements.js"></script>
