--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     Autosheet
   </p>
   <button id=import>Import</button>
-  <button id=save>Save</button>
+  <button id=save>Export</button>
   <button id=cursor>Cursor</button>
   <button id=pen>Pen</button>
   <button id=eraser>Eraser</button>
